--- a/tweets.html
+++ b/tweets.html
@@ -3,7 +3,7 @@
 <head>
     <link href="main.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD-kRmBTw0GFOPjUoxkJNZPXTGichE40E"></script>
-    <script src="markerwithlabel.js" type="text/javascript"></script>
+    <script src="thirdparty/markerwithlabel.js" type="text/javascript"></script>
     <script type="text/javascript">
         function add_tweet_marker(map, tweet) {
             var marker = new MarkerWithLabel({
